# TundraUX-2.0

./: .gitignore  CMakeLists.txt  README.zh-CN.md  TUI_COLOR_REQUIREMENTS.md  license  readme.md
APP/account_settings/: account_settings.cpp  account_settings.hpp
APP/editor/: editor_portable.cpp  editor_win.cpp  editor_win.hpp
APP/explorer/: explorer.cpp  explorer.hpp  explorer_actions.hpp  explorer_clipboard.cpp  explorer_clipboard.hpp  explorer_delete.cpp  explorer_delete.hpp  explorer_detail_actions.cpp  explorer_detail_actions.hpp  explorer_details.cpp  explorer_details.hpp  explorer_directory.cpp  explorer_directory.hpp  explorer_folder_ops.cpp  explorer_folder_ops.hpp  explorer_input.cpp  explorer_input.hpp  explorer_navigation.cpp  explorer_navigation.hpp  explorer_open.cpp  explorer_open.hpp  explorer_permissions.cpp  explorer_permissions.hpp  explorer_render.cpp  explorer_render.hpp  explorer_search.cpp  explorer_search.hpp  explorer_style.hpp  explorer_text.cpp  explorer_text.hpp  explorer_types.hpp
APP/file_manager/: TUXfile.cpp  TUXfile.hpp
APP/shell/: command.cpp  command.hpp  commandHandlers.cpp  commandHandlers.hpp  commandReg.cpp  commandRegistry.cpp
CORE/main/: main.cpp
SYSTEM/console/: color.cpp  color.hpp
SYSTEM/debug/: debug.cpp  debug.hpp
USER/account/: manageusers.cpp  manageusers.hpp
USER/udata/: udata.cpp  udata.hpp
inc/: TUXfile.h  TUXfile.hpp  color.h  color.hpp  command.h  commandHandlers.hpp  commandReg.hpp  console_screen.hpp  crypto.h  crypto.hpp  debug.h  debug.hpp  editor.h  editor.hpp  editor_win.h  explorer.hpp  hello.h  manageusers.h  udata.h
src/: TUXfile.cpp  color.cpp  command.cpp  commandHandlers.cpp  commandReg.cpp  commandRegistry.cpp  console_screen.cpp  crypto.cpp  debug.cpp  editor.cpp  editor_portable.cpp  editor_win.cpp  explorer.cpp  hello.cpp  main.cpp  manageusers.cpp  udata.cpp
